# llama-inference

./: .gitignore  .pre-commit-config.yaml  .pydoclint.ini  .secrets.baseline  Dockerfile  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: docker.yaml
configs/: example.yaml
scripts/: deploy.sh  merge_and_push.py
src/llama_inference/: config.py
src/llama_inference/cli/: inference.py
src/voice_inference/: __init__.py  config.py  hf.py  logging.py
src/voice_inference/cli/: __init__.py  inference.py
